@@ -17,6 +17,7 @@ Bekks (#gentoo-anfaenger at freenode)
 Roberto Castagnola <roberto.castagnola at gmail.com>
 Caster <caster at matfyz.cz>
 Mike Gardiner <obz at gentoo.org>
+Michał Górny <gentoo at mgorny.alt.pl>
 Fabian Groffen <grobian at gentoo.org>
 Edward "Hades" <edward.hades at gmail.com>
 Christian Heim <christian.th.heim at gmx.de>
