@@ -2,6 +2,13 @@
 
 *eix-0.20.4
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
+	- Interpret escapes for portage config files in the way portage does,
+	  see http://bugs.gentoo.org/show_bug.cgi?id=316907
+	  Thanks to Michał Górny <gentoo at mgorny.alt.pl> for the main part
+	  of the patch.
+
+*eix-0.20.4
+	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
 	- Support RESTRICT=parallel.
 	- Support RESTRICT=primaryuri in xml output.
 	- Ignore hidden files/dirs in local set dirs like /etc/portage/sets
